shaku_derive/tests/ui/submodule_service_attributes.stderr
error: Submodule components cannot have attributes
  --> tests/ui/submodule_service_attributes.rs:33:35
   |
33 |             components = [#[lazy] ComponentTrait],
   |                                   ^^^^^^^^^^^^^^

error: Providers cannot have attributes
  --> tests/ui/submodule_service_attributes.rs:48:26
   |
48 |             providers = [#[lazy] ProviderTrait],
   |                          ^^^^^^^
